# aerostack2

as2_motion_controller/: plugins.xml
as2_motion_controller/plugins/indi_controller_plugin/: CMakeLists.txt
as2_motion_controller/plugins/indi_controller_plugin/config/: available_modes.yaml  controller_default.yaml
as2_motion_controller/plugins/motor_speed_controller/: CMakeLists.txt
as2_motion_controller/plugins/motor_speed_controller/config/: available_modes.yaml  controller_default.yaml
as2_simulation_assets/as2_gazebo_assets/scripts/: jinja_gen.py
as2_simulation_assets/as2_gazebo_assets/src/as2_gazebo_assets/models/: drone.py  object.py  payload.py
as2_simulation_assets/as2_gazebo_assets/test/: config.json
as2_state_estimator/plugins/ground_truth/config/: plugin_default.yaml
